Ensure the training pipelines are always visible

--- a/ui/src/app/components/train/train.component.scss
+++ b/ui/src/app/components/train/train.component.scss
@@ -10,7 +10,7 @@
   div {
     flex-grow: 1;
     flex-basis: 0;
-    padding: 0 5px;
+    padding: 0 15px;
   }
 
   mat-checkbox {
