--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -36,6 +36,10 @@
   text-decoration: overline;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .mat-checkbox-disabled .mat-checkbox-label {
   color: inherit;
 }
